# hashstash

./: .gitignore  README.ipynb  README.md  codecov.yml  filehashcache.py  pyproject.toml  test_filehashcache.py
.github/workflows/: cd.yml  ci.yml
filehashcache/: __init__.py  constants.py  filehashcache.py  performance.py
filehashcache/engines/: base.py  files.py  memory.py  redis.py  shelve.py  sqlite.py
filehashcache/etc/: performance.py  profiler.py
filehashcache/utils/: utils.py
hashdict/: __init__.py  constants.py  hashdict.py
hashdict/engines/: base.py  diskcache.py  files.py  lmdb.py  memory.py  pickledb.py  redis.py  shelve.py  sqlite.py
hashdict/etc/: performance.py  profiler.py
hashdict/utils/: __init__.py  encodings.py  utils.py
hashstash/: __init__.py  config.py  constants.py  hashstash.py
hashstash/engines/: __init__.py  base.py  dataframe.py  diskcache.py  filepath.py  files.py  lmdb.py  memory.py  mongo.py  pairtree.py  pickledb.py  redis.py  shelve.py  sqlite.py
hashstash/etc/: performance.py  profiler.py
hashstash/profiler/: engine_profiler.py  profiler.py  serialize_profiler.py
hashstash/profilers/: __init__.py  engine_profiler.py  profiler.py  serialize_profiler.py
hashstash/serialize/: __init__.py  custom.py  deserialize.py  serialize.py
hashstash/serializers/: __init__.py  custom.py  jsons.py  serializer.py
hashstash/serializers/custom/: __init__.py  custom.py  deserialize.py  serialize.py
hashstash/utils/: __init__.py  addrs.py  dataframes.py  encodings.py  logs.py  misc.py  pmap.py  serialize.py  utils.py  wrappers.py
notebooks/: dev_map.ipynb  dev_performance.ipynb  dev_serialize.ipynb  dev_serialize_funcs.ipynb  dev_stashed_result.ipynb  profile_serialize.ipynb  profile_serialize2.ipynb  profilers.ipynb  profilers2.ipynb  profilers3.ipynb  profilers4.ipynb  profilers5.ipynb  profilers6.ipynb  profilers8.ipynb  profilers9.ipynb
tests/: test_addrs.py  test_dataframes.py  test_encoder.py  test_engines.py  test_pmap.py  test_profilers.py  test_serialize.py  test_wrappers.py
~/hashstash/project_cache/sub_cache/dbs/: sqlite.jsonpickle.db
