[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hashstash"
dynamic = ["version"]
authors = [
  { name="Dr Ryan Heuser", email="ryan.heuser@gmail.com" },
]
description = "A simple file-based caching system using hash-based file names"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "hashstash.__version__"}

[project.urls]
"Homepage" = "https://github.com/quadrismegistus/hashstash"
"Bug Tracker" = "https://github.com/quadrismegistus/hashstash/issues"

[project.optional-dependencies]
dev = [
  "sqlitedict", "redis", "redis_dict", "diskcache", "lmdb", "pickledb", 
  "jsonpickle", "orjson",
  "pandas", "numpy", "tqdm",
  "plotnine",
  "pytest", "pytest-cov", "setuptools-scm", "ipython", 
]
all = [
  "sqlitedict", "redis", "redis_dict", "diskcache", "lmdb", "pickledb", 
  "jsonpickle", "orjson",
  "pandas", "numpy", "tqdm"
]
engines = ["sqlitedict", "redis", "redis_dict", "diskcache", "lmdb", "pickledb"]
serializers = ["jsonpickle", "orjson"]


[tool.setuptools]
py-modules = ["hashstash"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["."]

[project.scripts]
test = "pytest:main"